css alignment fixes

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -418,8 +418,14 @@ nav.main-menu li.active > a,
   color: #000 !important;
 }
 
+.stepper-formatter{
+  width: 100% !important;
+  margin-left: 0 !important;
+  margin-right: 0 !important;
+}
+
 .active .hs-stepper-active\:border {
-  border: 1px solid #0183ce;
+  border: 2px solid #0183ce;
 }
 .active .hs-stepper-active\:p-2 {
   padding: 8px;
